# cashflower

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  circle_area.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
cashflower/: __init__.py  actuarial.py  admin.py  calculate.py  cashflow.py  core.py  error.py  execute.py  graph.py  model.py  modelpoint.py  reader.py  start.py  tree.py  utils.py  visualization.py  visualize.py
csv_reader_binary/: csv_reader_binary.py
csv_reader_cython/: csv_reader_cython.c  csv_reader_cython.cpp  csv_reader_cython.pyx  disc_rate_ann.csv  run_cython.py  setup.py
dev_model_25/: input.py  settings.py
dev_models/: 01_initial_runs.py  02_perform_checks.py  instructions.md
docs/: advanced.rst  algorithm.rst  annuity.rst  array_variables.rst  bond.rst  branching_policy.rst  cashflower.cython.rst  cashflower.rst  code_snippets.rst  conf.py  developer_guide.rst  discount_function.rst  getting_started.rst  graph_view.rst  how-tos.rst  index.rst  input.rst  life_insurance.rst  model.rst  modules.rst  mortgage.rst  output.rst  package_overview.rst  release_process.rst  requirements.txt  run.rst  settings.rst  snippets.rst  stochastic_variables.rst  testing.rst  time.rst  tutorials.rst  user_guide.rst  variable_types.rst  whole_life.rst
example/: input.py  model.py  settings.py
example2/: model.py
example3/: model.py  settings.py
example_step0/: input.py  model.py
example_step1/: input.py
example_step2/: input.py  model.py
my-model/: model.py  settings.py
output/: 20230323_085513_main.csv
(+305 files in other folders)
