[build-system]
requires = [
    "meson-python==0.13.1",
    "meson==1.2.1",
    "setuptools == 68.2.2",
    "wheel >= 0.34.2",
    "Cython",
    "oldest-supported-numpy>=2022.8.16; python_version<'3.12'",
    "numpy>=1.26.0; python_version>='3.12'",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
#skip = "pp* *_i686"
skip = "pp* *_i686 cp310* cp311* cp312*"
