[build-system]
requires = [
    "setuptools == 68.2.2",
    "wheel >= 0.34.2",
    "Cython",
    "numpy>=2.0.1",
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
skip = "pp* *_i686"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
line-length = 160
exclude = [
    "cashflower/__init__.py",
    "cashflower/model_tpl/model.py",
]
